--- a/WebScraper.ipynb
+++ b/WebScraper.ipynb
@@ -123,8 +123,170 @@
     "Once this whole process was done the contents of the laptop array was written to a csv file. The final data set was\n",
     "comprised of 750 entries with 11 columns. One of the columns labelled “Specifications” would be substituted with data\n",
     "from the second crawler which gathered only specification information. All fields contained textual data organised by\n",
-    "the sections in the reviews in which they came from such as; “Display”, “Performance”, “Case” etc.\n"
+    "the sections in the reviews in which they came from such as; “Display”, “Performance”, “Case” etc.\n",
+    "\n",
+    "![Figure 1 - Final dataset](DataTableFigure.png)\n",
+    "\n",
+    "Not as large of a data set was able to be created as was desired because of the use of only one website, however on a\n",
+    "finalised project this scraper would be run on multiple review sites.\n",
+    "\n",
+    "## Running\n",
+    "\n",
+    "In order to run this webcrawler the following packages are required\n",
+    "\n",
+    "•\tbs4\n",
+    "\n",
+    "•\tselenium\n",
+    "\n",
+    "•\ttqdm (To View the progress)\n",
+    "\n",
+    "It also requires for the ChromeDriver to be downloaded and added to the working directory for the user’s current\n",
+    "version of chrome.\n",
+    "\n",
+    "![Figure 2 - Webscraper working](WebScraperWorking.PNG)\n",
+    "\n",
+    "The scraper opens the physical web page for each of the laptops and then scrapes the data. As can be seen in the\n",
+    "progress bar it has scraped 3 out of 786 laptops and has an estimated time of 1 hour and 31 minutes remaining.\n",
+    "\n",
+    "## Code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "from bs4 import BeautifulSoup as soup\n",
+    "from selenium import webdriver\n",
+    "import tqdm\n",
+    "\n",
+    "# Chromedriver version 90 required to be installed\n",
+    "\n",
+    "def main():\n",
+    "    # Get all the link for each laptop\n",
+    "    website_url = 'https://www.notebookcheck.net/Reviews.55.0.html?&items_per_page=500&hide_youtube=1' \\\n",
+    "                  '&ns_show_num_normal=1&hide_external_reviews=1&introa_search_title=laptop%20review&tagArray[' \\\n",
+    "                  ']=16&typeArray[]=1 '\n",
+    "\n",
+    "    driver = webdriver.Chrome()\n",
+    "\n",
+    "    driver.get(website_url)\n",
+    "\n",
+    "    page_html = driver.page_source\n",
+    "\n",
+    "    page_soup = soup(page_html, 'html.parser')\n",
+    "\n",
+    "    links = []\n",
+    "    for a in page_soup.findAll(\"a\", {\"class\": \"introa_large introa_review\"}, href=True):\n",
+    "        links.append(a['href'])\n",
+    "    for a in page_soup.findAll(\"a\", {\"class\": \"introa_small introa_review\"}, href=True):\n",
+    "        links.append(a['href'])\n",
+    "\n",
+    "    website_url = \"https://www.notebookcheck.net/Reviews.55.0.html?&items_per_page=500&hide_youtube=1\" \\\n",
+    "                  \"&ns_show_num_normal=1&hide_external_reviews=1&page=1&introa_search_title=laptop%20review&tagArray[\" \\\n",
+    "                  \"]=16&typeArray[]=1 \"\n",
+    "\n",
+    "    driver.get(website_url)\n",
+    "\n",
+    "    page_html = driver.page_source\n",
+    "\n",
+    "    page_soup = soup(page_html, 'html.parser')\n",
+    "\n",
+    "    for a in page_soup.findAll(\"a\", {\"class\": \"introa_large introa_review\"}, href=True):\n",
+    "        links.append(a['href'])\n",
+    "    for a in page_soup.findAll(\"a\", {\"class\": \"introa_small introa_review\"}, href=True):\n",
+    "        links.append(a['href'])\n",
+    "\n",
+    "    labels = [\"Title\", \"Intro\", \"Specifications\", \"Case\", \"Connectivity\", \"Input devices\", \"Display\", \"Performance\",\n",
+    "              \"Emissions\", \"Energy management\", \"Verdict\"]\n",
+    "    laptops = [[], [], [], [], [], [], [], [], [], [], []]\n",
+    "    # Make into for loop\n",
+    "    for i in tqdm.tqdm(range(len(links))):\n",
+    "        # for i in tqdm.tqdm(range(10)):\n",
+    "        try:\n",
+    "            driver.get(links[i])\n",
+    "            page_html = driver.page_source\n",
+    "            page_soup = soup(page_html, 'html.parser')\n",
+    "            laptop = [[], [], [], [], [], [], [], [], [], [], []]\n",
+    "            laptop[0].append(page_soup.find(\"h1\", text=True).text)\n",
+    "            laptop[1].append(str(page_soup.find(\"div\", {\"class\": \"intro-text\"}).contents[1]).strip(\" \"))\n",
+    "            temp = page_soup.find('div', {\"class\": \"csc-textpic-text\"}).findAll(text=True)\n",
+    "\n",
+    "            # Retrieve Intro information\n",
+    "            for item in temp:\n",
+    "                str(item).strip(\" \").replace('\\n', '')\n",
+    "            temp = \" \".join(temp).replace(\"  \", \" \")\n",
+    "            laptop[1][0] = laptop[1][0] + \" \" + temp\n",
+    "\n",
+    "            divs = page_soup.find_all(\"div\", {\"class\": \"ttcl_0 csc-default\"})\n",
+    "            index = 0\n",
+    "            heading = ''\n",
+    "            for div in divs[1:]:\n",
+    "                sub_soup = soup(str(div), 'html.parser')\n",
+    "                if len(sub_soup.find_all(\"h2\")) > 0:\n",
+    "                    heading = str(sub_soup.find(\"h2\", text=True).text).capitalize()\n",
+    "                    if (\"Case\" in heading) or (\"Chassis\" in heading):\n",
+    "                        index = 3\n",
+    "                    elif (\"Connectivity\" in heading) or (\"Equipment\" in heading):\n",
+    "                        index = 4\n",
+    "                    elif \"Input\" in heading:\n",
+    "                        index = 5\n",
+    "                    elif \"Display\" in heading:\n",
+    "                        index = 6\n",
+    "                    elif \"Performance\" in heading:\n",
+    "                        index = 7\n",
+    "                    elif \"Emissions\" in heading:\n",
+    "                        index = 8\n",
+    "                    elif \"Energy\" in heading:\n",
+    "                        index = 9\n",
+    "                    elif \"Verdict\" in heading:\n",
+    "                        index = 10\n",
+    "\n",
+    "                try:\n",
+    "                    sub_temp = sub_soup.find('div', {\"class\": \"csc-textpic-text\"}).findAll(text=True)\n",
+    "                    for item in sub_temp:\n",
+    "                        str(item).strip(\" \").replace('\\n', '')\n",
+    "\n",
+    "                    laptop[index].append(str(\" \".join(sub_temp).replace(\"  \", \" \")))\n",
+    "                    laptop[index][0].strip('\\n').replace(\"  \", \" \")\n",
+    "\n",
+    "                    if laptop[index][0] == '':\n",
+    "                        laptop[index][0] = heading\n",
+    "\n",
+    "                except:\n",
+    "                    continue\n",
+    "\n",
+    "            for i in range(len(laptop)):\n",
+    "                if len(laptop[i]) == 0:\n",
+    "                    laptop[i].append(\"none\")\n",
+    "                laptops[i].append(laptop[i])\n",
+    "\n",
+    "        except:\n",
+    "            continue\n",
+    "\n",
+    "    # Saving to a csv file\n",
+    "    with open('output.csv', 'w', newline='', encoding='utf-8') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerow(labels)\n",
+    "        for i in tqdm.tqdm(range(len(laptops[0]))):\n",
+    "            try:\n",
+    "                laptop = []\n",
+    "                for j in range(len(laptops)):\n",
+    "                    laptop.append(laptops[j][i][0])\n",
+    "                writer.writerow(laptop)\n",
+    "            except:\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "main()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
