--- a/WebScraper.ipynb
+++ b/WebScraper.ipynb
@@ -71,11 +71,11 @@
     "\n",
     "To extract the webpage html for each of the pages of the website a combination of both selenium and beautiful soup was\n",
     "used. Selenium makes use of a webdriver that operates the page the same way in which a user would, it opens the webpage\n",
-    "specified natively in the specified browser [1]. The browser selected was chrome, given it has the highest degree of\n",
+    "specified natively in the specified browser (WebDriver, 2021). The browser selected was chrome, given it has the highest degree of\n",
     "familiarity (This required a separate installation and path specification). This allows for information to be extracted\n",
     "from sites where the contents are only populated when the page is opened (Javascript based sites). Selenium was only\n",
     "utilised to get a complete page html where the information can be extracted from using beautiful soup. Beautiful soup is\n",
-    "a python library for extracting information from HTML and XML files [2].\n",
+    "a python library for extracting information from HTML and XML files (Richardson, 2020).\n",
     "\n",
     "The webcrawler works by loading the main search page url into the webdriver which extracts the page html. Beautiful soup\n",
     "takes in this html and the a tag information is extracted for a specific class, being determined by manually looking\n",
@@ -285,6 +285,23 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## References\n",
+    "\n",
+    "WebDriver. (2021, May 27). Selenium. https://www.selenium.dev/documentation/en/webdriver/\n",
+    "\n",
+    "Richardson, L. R. (2020). Beautiful Soup Documentation — Beautiful Soup 4.9.0 documentation. Crummy.\n",
+    "https://www.crummy.com/software/BeautifulSoup/bs4/doc/"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
