Fixed figure labels

--- a/NLPTasks.ipynb
+++ b/NLPTasks.ipynb
@@ -57,6 +57,8 @@
     "as an ORG when it is clearly not. When the results of the Stanford NER model are assessed, it has a lower detection rate\n",
     "but all the detections that are performed are correct.\n",
     "\n",
+    "Figure 1 - NER Results\n",
+    "\n",
     "![Figure 1 - NER Results](NERResults.PNG)\n",
     "\n",
     "It should be noted that the spacey model is significantly faster than the Stanford model with it taking only 7 seconds\n",
@@ -210,6 +212,8 @@
     "will then be manually reviewed to gauge if the mapped sentiment matches the actual overall outlook of the body of text.\n",
     "For this the verdict paragraph will be selected as this gives a finalised opinion of the laptop which will be the\n",
     "easiest to assess the outlook off.\n",
+    "\n",
+    "Figure 2 - Verdict and corresponding sentiment score\n",
     "\n",
     "![Figure 2 - Verdict and corresponding sentiment score](SentimentResults.PNG)\n",
     "\n",
