--- a/WebScraper.ipynb
+++ b/WebScraper.ipynb
@@ -125,6 +125,8 @@
     "from the second crawler which gathered only specification information. All fields contained textual data organised by\n",
     "the sections in the reviews in which they came from such as; “Display”, “Performance”, “Case” etc.\n",
     "\n",
+    "Figure 1 - Final dataset\n",
+    "\n",
     "![Figure 1 - Final dataset](DataTableFigure.png)\n",
     "\n",
     "Not as large of a data set was able to be created as was desired because of the use of only one website, however on a\n",
@@ -142,6 +144,8 @@
     "\n",
     "It also requires for the ChromeDriver to be downloaded and added to the working directory for the user’s current\n",
     "version of chrome.\n",
+    "\n",
+    "Figure 2 - Webscraper working\n",
     "\n",
     "![Figure 2 - Webscraper working](WebScraperWorking.PNG)\n",
     "\n",
@@ -268,6 +272,286 @@
     "    # Saving to a csv file\n",
     "    with open('output.csv', 'w', newline='', encoding='utf-8') as f:\n",
     "        writer = csv.writer(f)\n",
+    "        writer.writerow(labels)\n",
+    "        for i in tqdm.tqdm(range(len(laptops[0]))):\n",
+    "            try:\n",
+    "                laptop = []\n",
+    "                for j in range(len(laptops)):\n",
+    "                    laptop.append(laptops[j][i][0])\n",
+    "                writer.writerow(laptop)\n",
+    "            except:\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "main()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Code for secondary scraper (Not used in the NLP tasks)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from urllib.request import urlopen as uReq\n",
+    "import csv\n",
+    "import bs4\n",
+    "from bs4 import BeautifulSoup as soup\n",
+    "from selenium import webdriver\n",
+    "import tqdm\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    website_url = 'https://laptopmedia.com/au/all-laptop-series/'\n",
+    "\n",
+    "    driver = webdriver.Chrome()\n",
+    "\n",
+    "    driver.get(website_url)\n",
+    "\n",
+    "    page_html = driver.page_source\n",
+    "\n",
+    "    page_soup = soup(page_html, 'html.parser')\n",
+    "\n",
+    "    links = []\n",
+    "    for a in page_soup.findAll(\"a\", {\"class\":\"lp-series-table-row\"}, href=True):\n",
+    "        links.append(a['href'])\n",
+    "\n",
+    "    labels = [\"Name\", \"CPU\", \"GPU\", \"Display\", \"HDD/SSD\", \"RAM\", \"OS\", \"Dimensions\", \"Weight\", \"Body material\",\n",
+    "              \"M.2 Slot\", \"Misc\", \"USB Type-A\", \"USB Type-C\", \"HDMI\", \"VGA\", \"DVI\", \"Card reader\", \"Ethernet Lan\",\n",
+    "              \"Wi-Fi\", \"Audio jack\", \"Web camera\", \"Microphone\", \"Speakers\", \"Optical drive\", \"Security lock slot\",\n",
+    "              \"Fingerprint reader\", \"Backlit keyboard\", \"Bluetooth\"]\n",
+    "    laptops = [[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [],\n",
+    "              [], [], [], []]\n",
+    "\n",
+    "    #Make into for loop\n",
+    "    for i in tqdm.tqdm(range(len(links))):\n",
+    "        try:\n",
+    "            driver.get(links[i])\n",
+    "            page_html = driver.page_source\n",
+    "            page_soup = soup(page_html, 'html.parser')\n",
+    "            laptop = [[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [],\n",
+    "                      [], [], [], []]\n",
+    "            laptop[0].append(page_soup.find(\"h1\", text=True).text)\n",
+    "\n",
+    "            cpu_specifications = []\n",
+    "            gpu_specifications = []\n",
+    "            embedded_links = []\n",
+    "            gpu_links = []\n",
+    "            cpu_links = []\n",
+    "            cpu_names = \"\"\n",
+    "            gpu_names = \"\"\n",
+    "\n",
+    "            divs = page_soup.find_all(\"div\", {\"class\": \"lp-row-table lp-row-table-inline\"})\n",
+    "            for div in divs:\n",
+    "                sub_soup = soup(str(div), 'html.parser')\n",
+    "                # Default specifications\n",
+    "                for element in sub_soup.find_all(\"div\", {\"class\": \"col-md-8\"}):\n",
+    "                    if div.strong.text == \"Display\":\n",
+    "                        laptop[3].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif div.strong.text == \"HDD/SSD\":\n",
+    "                        laptop[4].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif div.strong.text == \"RAM\":\n",
+    "                        laptop[5].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif div.strong.text == \"OS\":\n",
+    "                        laptop[6].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif div.strong.text == \"Dimensions\":\n",
+    "                        laptop[7].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif div.strong.text == \"Weight\":\n",
+    "                        laptop[8].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif div.strong.text == \"Body material\":\n",
+    "                        laptop[9].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif div.strong.text == \"M.2 Slot\":\n",
+    "                        laptop[10].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    else:\n",
+    "                        laptop[11].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "\n",
+    "                # CPU and GPU\n",
+    "                for element in sub_soup.find_all(\"div\", {\"class\": \"col-md-10\"}):\n",
+    "                    if div.strong.text == \"GPU\":\n",
+    "                        gpu_names = str(element.text).strip(\"\\n\").strip(\" \")\n",
+    "                    elif div.strong.text == \"CPU\":\n",
+    "                        cpu_names = str(element.text).strip(\"\\n\").strip(\" \")\n",
+    "\n",
+    "                for element in sub_soup.findAll(\"a\", href=True):\n",
+    "                    embedded_links.append(element['href'])\n",
+    "\n",
+    "            divs2 = page_soup.find_all(\"div\", {\"class\": \"lp-row-double-table\"})\n",
+    "            for div in divs2:\n",
+    "                sub_soup2 = soup(str(div), \"html.parser\")\n",
+    "                # Ports and connectivity\n",
+    "                for element in sub_soup2.find_all(\"li\"):\n",
+    "                    subsub_soup2 = soup(str(element), \"html.parser\")\n",
+    "                    if element['class'][0] == \"icon-usb-a\":\n",
+    "                        laptop[12].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-usb-c\":\n",
+    "                        laptop[13].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-hdmi\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[14].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[14].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-vga\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[15].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[15].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-dvi\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[16].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[16].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-card-reader\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[17].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[17].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-lan\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[18].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[18].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-wi-fi\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[19].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[19].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-audio-jack\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[20].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[20].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-web-camera\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[21].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[21].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-microphone\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[22].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[22].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-speakers\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[23].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[23].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-dvd\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[24].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[24].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-security-lock\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[25].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[25].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-finger-print\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[26].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[26].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-backlight\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[27].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[27].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "                    elif element['class'][0] == \"icon-bluetooth\":\n",
+    "                        if len(subsub_soup2.find_all(\"i\")) > 0:\n",
+    "                            laptop[28].append(\"Yes\")\n",
+    "                        else:\n",
+    "                            laptop[28].append(str(subsub_soup2.find(\"em\").string).strip(\"\\n\").strip(\" \"))\n",
+    "\n",
+    "            cpu_names = cpu_names.split(\",\")\n",
+    "            gpu_names = gpu_names.split(\",\")\n",
+    "\n",
+    "            for link in embedded_links:\n",
+    "                if \"https://laptopmedia.com/au/processor\" in link:\n",
+    "                    cpu_links.append(link)\n",
+    "                elif \"https://laptopmedia.com/au/video-card\" in link:\n",
+    "                    gpu_links.append(link)\n",
+    "\n",
+    "            # Another for loop nested for each cpu\n",
+    "            for cpu_link in cpu_links:\n",
+    "                driver.get(cpu_link)\n",
+    "                page_html = driver.page_source\n",
+    "                page_soup = soup(page_html, 'html.parser')\n",
+    "\n",
+    "                cpu_specification = {}\n",
+    "                cpu_specification[\"CPU_name\"] = cpu_names[0]\n",
+    "\n",
+    "                counter = 0\n",
+    "                divs = page_soup.find_all(\"div\", {\"class\":\"col-md-6 col-sm-12\"})\n",
+    "                for div in divs:\n",
+    "                    sub_soup = soup(str(div), 'html.parser')\n",
+    "                    tables = sub_soup.findChildren('table')\n",
+    "                    my_table = tables[0]\n",
+    "                    rows = my_table.findChildren(['th', 'tr'])\n",
+    "                    for row in rows:\n",
+    "                        value = row.findChildren('td')\n",
+    "                        names = row.findChildren('th')\n",
+    "                        if len(value) > 0 and counter > 0:\n",
+    "                            cpu_specification[str(names[0].string)] = str(value[0].string).strip(\" \")\n",
+    "                        counter += 1\n",
+    "\n",
+    "                cpu_specifications.append(cpu_specification)\n",
+    "\n",
+    "            # Another for loop nested for each gpu\n",
+    "            for gpu_link in gpu_links:\n",
+    "                driver.get(gpu_link)\n",
+    "                page_html = driver.page_source\n",
+    "                page_soup = soup(page_html, 'html.parser')\n",
+    "\n",
+    "                gpu_specification = {}\n",
+    "                gpu_specification[\"GPU_name\"] = gpu_names[0]\n",
+    "\n",
+    "                counter = 0\n",
+    "                divs = page_soup.find_all(\"div\", {\"class\": \"col-md-6 col-sm-12\"})\n",
+    "                for div in divs:\n",
+    "                    sub_soup = soup(str(div), 'html.parser')\n",
+    "                    tables = sub_soup.findChildren('table')\n",
+    "                    my_table = tables[0]\n",
+    "                    rows = my_table.findChildren(['th', 'tr'])\n",
+    "                    for row in rows:\n",
+    "                        value = row.findChildren('td')\n",
+    "                        names = row.findChildren('th')\n",
+    "                        if len(value) > 0 and counter > 0:\n",
+    "                            gpu_specification[str(names[0].string)] = str(value[0].string).strip(\" \")\n",
+    "                        counter += 1\n",
+    "\n",
+    "                gpu_specifications.append(gpu_specification)\n",
+    "\n",
+    "            laptop[1].append(cpu_specifications)\n",
+    "            laptop[2].append(gpu_specifications)\n",
+    "\n",
+    "            for i in range(len(laptop)):\n",
+    "                if len(laptop[i]) == 0:\n",
+    "                    laptop[i].append(\"none\")\n",
+    "                laptops[i].append(laptop[i])\n",
+    "\n",
+    "        except:\n",
+    "            continue\n",
+    "\n",
+    "    #Saving to a csv file\n",
+    "    myFile = open('data.csv', 'w')\n",
+    "    with myFile:\n",
+    "        writer = csv.writer(myFile)\n",
     "        writer.writerow(labels)\n",
     "        for i in tqdm.tqdm(range(len(laptops[0]))):\n",
     "            try:\n",
