--- a/WebScraper.ipynb
+++ b/WebScraper.ipynb
@@ -205,9 +205,8 @@
     "    labels = [\"Title\", \"Intro\", \"Specifications\", \"Case\", \"Connectivity\", \"Input devices\", \"Display\", \"Performance\",\n",
     "              \"Emissions\", \"Energy management\", \"Verdict\"]\n",
     "    laptops = [[], [], [], [], [], [], [], [], [], [], []]\n",
-    "    # Make into for loop\n",
+    "    # Loop through all the laptop links and retrieve specification data\n",
     "    for i in tqdm.tqdm(range(len(links))):\n",
-    "        # for i in tqdm.tqdm(range(10)):\n",
     "        try:\n",
     "            driver.get(links[i])\n",
     "            page_html = driver.page_source\n",
@@ -223,10 +222,12 @@
     "            temp = \" \".join(temp).replace(\"  \", \" \")\n",
     "            laptop[1][0] = laptop[1][0] + \" \" + temp\n",
     "\n",
+    "            # Retrieve main segment text\n",
     "            divs = page_soup.find_all(\"div\", {\"class\": \"ttcl_0 csc-default\"})\n",
     "            index = 0\n",
     "            heading = ''\n",
     "            for div in divs[1:]:\n",
+    "                # Determine what segment it is\n",
     "                sub_soup = soup(str(div), 'html.parser')\n",
     "                if len(sub_soup.find_all(\"h2\")) > 0:\n",
     "                    heading = str(sub_soup.find(\"h2\", text=True).text).capitalize()\n",
@@ -248,6 +249,7 @@
     "                        index = 10\n",
     "\n",
     "                try:\n",
+    "                    # Remove all new line characters and double spaces\n",
     "                    sub_temp = sub_soup.find('div', {\"class\": \"csc-textpic-text\"}).findAll(text=True)\n",
     "                    for item in sub_temp:\n",
     "                        str(item).strip(\" \").replace('\\n', '')\n",
@@ -255,12 +257,14 @@
     "                    laptop[index].append(str(\" \".join(sub_temp).replace(\"  \", \" \")))\n",
     "                    laptop[index][0].strip('\\n').replace(\"  \", \" \")\n",
     "\n",
+    "                    # Set content to heading if it is a no text segment\n",
     "                    if laptop[index][0] == '':\n",
     "                        laptop[index][0] = heading\n",
     "\n",
     "                except:\n",
     "                    continue\n",
     "\n",
+    "            # Append current laptop info to main laptop array\n",
     "            for i in range(len(laptop)):\n",
     "                if len(laptop[i]) == 0:\n",
     "                    laptop[i].append(\"none\")\n",
@@ -340,7 +344,7 @@
     "    laptops = [[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [],\n",
     "              [], [], [], []]\n",
     "\n",
-    "    #Make into for loop\n",
+    "    # Loop over all the laptop links and retrieve the data\n",
     "    for i in tqdm.tqdm(range(len(links))):\n",
     "        try:\n",
     "            driver.get(links[i])\n",
@@ -350,6 +354,7 @@
     "                      [], [], [], []]\n",
     "            laptop[0].append(page_soup.find(\"h1\", text=True).text)\n",
     "\n",
+    "            # Initialize lists\n",
     "            cpu_specifications = []\n",
     "            gpu_specifications = []\n",
     "            embedded_links = []\n",
@@ -358,6 +363,7 @@
     "            cpu_names = \"\"\n",
     "            gpu_names = \"\"\n",
     "\n",
+    "            # Retrieve main specifications based on labed\n",
     "            divs = page_soup.find_all(\"div\", {\"class\": \"lp-row-table lp-row-table-inline\"})\n",
     "            for div in divs:\n",
     "                sub_soup = soup(str(div), 'html.parser')\n",
@@ -382,7 +388,7 @@
     "                    else:\n",
     "                        laptop[11].append(str(element.text).strip(\"\\n\").strip(\" \"))\n",
     "\n",
-    "                # CPU and GPU\n",
+    "                # CPU and GPU retrieval\n",
     "                for element in sub_soup.find_all(\"div\", {\"class\": \"col-md-10\"}):\n",
     "                    if div.strong.text == \"GPU\":\n",
     "                        gpu_names = str(element.text).strip(\"\\n\").strip(\" \")\n",
@@ -487,7 +493,7 @@
     "                elif \"https://laptopmedia.com/au/video-card\" in link:\n",
     "                    gpu_links.append(link)\n",
     "\n",
-    "            # Another for loop nested for each cpu\n",
+    "            # Loop through and retrieve info for all CPU links found\n",
     "            for cpu_link in cpu_links:\n",
     "                driver.get(cpu_link)\n",
     "                page_html = driver.page_source\n",
@@ -512,7 +518,7 @@
     "\n",
     "                cpu_specifications.append(cpu_specification)\n",
     "\n",
-    "            # Another for loop nested for each gpu\n",
+    "            # Loop through and retrieve info for all GPU links found\n",
     "            for gpu_link in gpu_links:\n",
     "                driver.get(gpu_link)\n",
     "                page_html = driver.page_source\n",
@@ -540,6 +546,7 @@
     "            laptop[1].append(cpu_specifications)\n",
     "            laptop[2].append(gpu_specifications)\n",
     "\n",
+    "            # Append current laptop to main laptop array\n",
     "            for i in range(len(laptop)):\n",
     "                if len(laptop[i]) == 0:\n",
     "                    laptop[i].append(\"none\")\n",
