--- a/NLPTasks.ipynb
+++ b/NLPTasks.ipynb
@@ -68,12 +68,19 @@
     "is dated back to 2012 which in the period since, more sophisticated models have been developed with a much higher\n",
     "success rate.\n",
     "\n",
-    "### Code"
+    "### Code\n",
+    "\n",
+    "Note: In order to run the stanford NER needs to be downloaded and in the same directory as this file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Packages\n",
@@ -88,7 +95,7 @@
     "java_path = r\"C:\\Program Files\\Java\\jre1.8.0_291\\bin\\java.exe\"\n",
     "os.environ['JAVAHOME'] = java_path\n",
     "\n",
-    "\n",
+    "# Perform the named entity recognition using Spacy\n",
     "def spacy(data):\n",
     "    brandNames = []\n",
     "    nlp = en_core_web_sm.load()\n",
@@ -103,19 +110,23 @@
     "        else:\n",
     "            brandNames.append(organizations[0])\n",
     "\n",
+    "    # Count number of no brand entries\n",
     "    counter = 0\n",
     "    for brand in brandNames:\n",
     "        if brand == \"No brand found\":\n",
     "            counter += 1\n",
     "\n",
+    "    # Output Detection rate\n",
     "    print(\"Number of non branded entries: \" + str(counter))\n",
     "    print(\"Percentage detection: \" + str(((len(brandNames) - counter)/(len(brandNames) + 0.0))*100))\n",
     "\n",
     "    return brandNames\n",
     "\n",
     "\n",
-    "def namedEntityRecognition(data):\n",
+    "# Perform the named entity recognition using stanford NER\n",
+    "def standordNER(data):\n",
     "    brandNames = []\n",
+    "    # Load the stanford model\n",
     "    model_filename = './stanford-ner-2020-11-17/classifiers/english.all.3class.distsim.crf.ser.gz'\n",
     "    path_to_jar = './stanford-ner-2020-11-17/stanford-ner.jar'\n",
     "    st = StanfordNERTagger(model_filename=model_filename, path_to_jar=path_to_jar, encoding='utf-8')\n",
@@ -131,11 +142,13 @@
     "        else:\n",
     "            brandNames.append(organizations[0])\n",
     "\n",
+    "    # Count number of no brand entries\n",
     "    counter = 0\n",
     "    for brand in brandNames:\n",
     "        if brand == \"No brand found\":\n",
     "            counter += 1\n",
     "\n",
+    "    # Output Detection rate\n",
     "    print(\"Number of non branded entries: \" + str(counter))\n",
     "    print(\"Percentage detection: \" + str(((len(brandNames) - counter)/(len(brandNames) + 0.0))*100))\n",
     "\n",
@@ -145,28 +158,27 @@
     "def main():\n",
     "    data = pd.read_csv('output.csv')\n",
     "\n",
-    "    brands = namedEntityRecognition(data)\n",
-    "    brands2 = spacy(data)\n",
+    "    standfordBrands = standordNER(data)\n",
+    "    spacyBrands = spacy(data)\n",
     "\n",
-    "    print(brands)\n",
-    "    print(brands2)\n",
+    "    print(standfordBrands)\n",
+    "    print(spacyBrands)\n",
     "\n",
-    "    data['Brand'] = brands\n",
+    "    data['Brand'] = standfordBrands\n",
     "\n",
     "    data.to_csv('outputBrand.csv', index=False)\n",
     "\n",
     "\n",
     "main()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## NLP Task 2 - Sentiment Analysis\n",
     "\n",
@@ -227,17 +239,16 @@
     "rating scraped being a 74% (The data set is skewed more towards positive outlook).\n",
     "\n",
     "### Code"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -248,7 +259,7 @@
     "from nltk.corpus import stopwords\n",
     "import re\n",
     "\n",
-    "\n",
+    "# Remove stop words and non word characters\n",
     "def noiseRemoval(data):\n",
     "    stop_words = set(stopwords.words('english'))\n",
     "    for i in tqdm.tqdm(range(data.shape[0])):\n",
@@ -270,6 +281,7 @@
     "    normalization(data)\n",
     "\n",
     "\n",
+    "# Normalize the data by lemmatization\n",
     "def normalization(data):\n",
     "    lemmatizer = nltk.stem.WordNetLemmatizer()\n",
     "    for i in tqdm.tqdm(range(data.shape[0])):\n",
@@ -289,6 +301,7 @@
     "        return analyser.polarity_scores(sentence)\n",
     "\n",
     "\n",
+    "# Perform the sentiment analysis\n",
     "def sentimentAnalysis(data):\n",
     "    segments = [[], [], [], [], [], [], [], [], []]\n",
     "    for index, row in tqdm.tqdm(data.iterrows()):\n",
@@ -321,16 +334,15 @@
     "\n",
     "\n",
     "main()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## References\n",
     "\n",
@@ -348,13 +360,7 @@
     "\n",
     "Singh, F. (2021, February 2). Sentiment Analysis Made Easy Using VADER. Analytics India Magazine.\n",
     "https://analyticsindiamag.com/sentiment-analysis-made-easy-using-vader/"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -366,16 +372,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
